# OpportunityOS

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  go.work  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/admin-web/: package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/customer-portal/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/developer-docs/: package.json  tsconfig.tsbuildinfo
apps/marketplace-web/: next.config.ts  package.json  tsconfig.tsbuildinfo
apps/operator-console/: next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/reseller-portal/: package.json  tsconfig.tsbuildinfo
apps/supplier-portal/: package.json  tsconfig.tsbuildinfo
deployments/: core-api.Dockerfile  docker-compose.production.yml
docs/: 00-project-charter.md  01-domain-glossary.md  02-context-map.md  03-architecture.md  04-domain-model.md  05-state-machines.md  06-event-catalog.md  07-api-conventions.md  08-business-blueprint-schema.md  09-workflow-engine.md  10-pricing-and-metering.md  11-ledger-rules.md  12-security-boundaries.md  13-data-ownership-matrix.md  14-feature-lifecycle.md  15-roadmap.md  16-risk-register.md
docs/adr/: 0001-modular-monolith.md  (+8 more)
scripts/: task.mjs
services/crawler-worker/: pyproject.toml
services/crawler-worker/src/opportunity_crawler/: url_policy.py
services/crawler-worker/src/opportunity_crawler_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/crawler-worker/tests/: test_url_policy.py
(+118 files in other folders)
